--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <title>reveal.js</title>
+        <title>Data Science Nights sessions</title>
 
         <link rel="stylesheet" href="reveal.js/css/reset.css">
         <style type="text/css">
