Link to jupyter notebooks

--- a/2019-11-21-python-intro/index.html
+++ b/2019-11-21-python-intro/index.html
@@ -187,10 +187,6 @@ for i, el in enumerate(array[1:]):
     </section>
 
     <section>
-        <h3>Launch jupyter notebook</h3>
-    </section>
-
-    <section>
         <h3>Parts of speech, <em>simple</em></h3>
         <code>1</code> reads “number 1” or “integer 1”<br/>
         <code>1.5</code> reads “number 1.5” or “float 1.5”<br/>
@@ -305,7 +301,7 @@ print(index_of_max([]))</code></pre>
     <section>
         <h3>Errors</h3>
 
-        <p>Switch to Errors notebook</p>
+        <p>Switch to <a href="https://github.com/mxposed/dsn-intro/blob/master/2019-11-21-python-intro/Errors.ipynb">Errors notebook</a></p>
     </section>
 </section>
 
@@ -374,6 +370,14 @@ list(a.items())        # [(1,-1),(3,9),(5,25),(0,0)]</code></pre>
         <li>sharing your project</li>
         <li>very useful still for personal projects</li>
     </ul>
+</section>
+
+<section>
+    <h3>A briefest example of plotting data</h3>
+
+    <p>See <a href="https://github.com/mxposed/dsn-intro/blob/master/2019-11-21-python-intro/Example.ipynb">Example notebook</a>
+    to see how <code>matplotlib</code> and <code>pandas</code>
+    can be used to produce basic plots</p>
 </section>
 
 <section>
