--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@ a:hover {
         <h4><em>Evanston, Illinois</em></h4>
 
         <small>
-            <p>— 11/21/2019 <a href="2019-11-21-python-intro/">Introduction to python for data science</a></p>
+            <p>— 11/21/2019 <a href="2019-11-21-python-intro/">Introduction to python for data science</a>
+            </p>
 
             <p style="margin-top:6em">
+                These sessions’ <a href="https://github.com/mxposed/dsn-intro">github repository</a><br/><br/>
                 <a href="http://www.data-science-nights.org/">http://www.data-science-nights.org/</a>
             </p>
         </small>
